feat:update work experience at knitto textiles & skills

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
           </li>
 
-          <a class="resume-btn" href="./assets/resume/Fikri-Husni-Mubaroq.pdf" target="_blank" download>
+          <a class="resume-btn" href="./assets/resume/cv-fikri-husni mubaroq.pdf" target="_blank" download>
             <span>Download Resume</span>
           </a>
         </ul>
@@ -187,11 +187,15 @@
 
         <section class="about-text">
           <p>
-        Frontend developer with over 2 years of experience in creating more than 20 landing pages, tools, and various responsive
-        web applications using HTML, CSS, JavaScript, Webpack, TypeScript, React, Next.js, Redux, Redux Toolkit, Zod, and
-        Zustand. I also have experience in developing Chrome extensions for data scraping and automation. I am highly
-        enthusiastic about learning from others and enhancing my skills. In addition to that, I have experience in creating UI
-        libraries and documenting them using Storybook.
+            Frontend Developer with 2+ years of hands-on experience building over 20 responsive landing pages, internal
+            tools, and
+            full-featured web applications using modern technologies such as React, Next.js, TypeScript, Redux Toolkit,
+            and Zustand.
+            Skilled in developing Chrome extensions for automation and data scraping, with a strong focus on
+            performance,
+            scalability, and user experience. I thrive in collaborative environments, constantly seek to improve my
+            technical
+            capabilities, and enjoy turning complex ideas into clean, maintainable UI solutions.
           </p>
 
         </section>
@@ -256,8 +260,8 @@
 
               <a target="_blank" href="https://komunitasmea.com" class="h4 timeline-item-title">
                 <span>PT. Knitto Tekstil Indonesia - Front End Web Developer</span>
-                 <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 512 512" color="white" height="18"
-                  width="18" xmlns="http://www.w3.org/2000/svg" style="color: white;">
+                <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 512 512" color="white"
+                  height="18" width="18" xmlns="http://www.w3.org/2000/svg" style="color: white;">
                   <path fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="32"
                     d="M384 224v184a40 40 0 0 1-40 40H104a40 40 0 0 1-40-40V168a40 40 0 0 1 40-40h167.48M336 64h112v112M224 288 440 72">
                   </path>
@@ -266,17 +270,37 @@
               <span>Mei 2024 — Present</span>
 
               <ul class="timeline-text">
-                <li>● Developed websites and internal apps using React.js, Ant Design, Tailwind CSS, Redux, RTK Query, and Next.js.</li>
+                <li>● Implemented UI virtualization for large data sets using windowing techniques (e.g., react-window),
+                  significantly
+                  improving rendering performance and reducing memory usage.</li>
+                <li>● Built infinite scroll functionality for dynamic content feeds, enhancing user experience by
+                  seamlessly loading paginated
+                  data as users scroll.</li>
+                <li>● Applied the Singleton pattern to manage global services (e.g., authentication, configuration, or API
+                  clients) to ensure
+                  state consistency and avoid redundant instances across the application.</li>
+                <li>● Integrated AnyTrack tracking to monitor user behavior, conversions, and events across the
+                  application, enabling accurate
+                  attribution and performance analysis.</li>
+                <li>● Configured custom event tracking for key user actions (e.g., sign-ups, purchases, CTA clicks) to
+                  align with business
+                  goals and improve marketing campaign insights.</li>
+                <li>● Developed websites and internal apps using React.js, Ant Design, Tailwind CSS, Redux, RTK Query,
+                  and Next.js.</li>
                 <li>● Collaboration with UI/UX for UI slicing and integration with backend</li>
                 <li>● Convert CSS modules to use Tailwind utility-first classes</li>
-                <li>● Implemented a monorepo strategy to manage multiple applications and libraries within a single integrated repository,
-                enabling more efficient collaboration among teams and easier code management.</li>
-                <li>● Designed and implemented a Chrome Extension specifically for the Qiscus platform to streamline various operational
-                tasks and making it easier for teams to manage customer interactions and operations.</li>
-                <li>● Developed Custom UI Library that allows teams to easily integrate and reuse components across different projects,
-                reducing development time and maintaining high-quality UI standards.</li>
-                <li>● Utilized Storybook to present custom UI library components in an interactive and user-friendly, allowing developers to
-                easily view, test, and modify components in real-time.</li>
+                <li>● Implemented a monorepo strategy to manage multiple applications and libraries within a single
+                  integrated repository,
+                  enabling more efficient collaboration among teams and easier code management.</li>
+                <li>● Designed and implemented a Chrome Extension specifically for the Qiscus platform to streamline
+                  various operational
+                  tasks and making it easier for teams to manage customer interactions and operations.</li>
+                <li>● Developed Custom UI Library that allows teams to easily integrate and reuse components across
+                  different projects,
+                  reducing development time and maintaining high-quality UI standards.</li>
+                <li>● Utilized Storybook to present custom UI library components in an interactive and user-friendly,
+                  allowing developers to
+                  easily view, test, and modify components in real-time.</li>
               </ul>
 
             </li>
@@ -284,8 +308,8 @@
 
               <a target="_blank" href="https://komunitasmea.com" class="h4 timeline-item-title">
                 <span>PT. MEA Digital Marketing - Jr. Front End Web Developer</span>
-                 <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 512 512" color="white" height="18"
-                  width="18" xmlns="http://www.w3.org/2000/svg" style="color: white;">
+                <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 512 512" color="white"
+                  height="18" width="18" xmlns="http://www.w3.org/2000/svg" style="color: white;">
                   <path fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="32"
                     d="M384 224v184a40 40 0 0 1-40 40H104a40 40 0 0 1-40-40V168a40 40 0 0 1 40-40h167.48M336 64h112v112M224 288 440 72">
                   </path>
@@ -308,9 +332,9 @@
                 <li>
                   ● Monitoring and reporting on error and performance Website.
                 </li>
-                
+
                 <li>
-                  ● implementation Unit Testing using Jest. 
+                  ● implementation Unit Testing using Jest.
                 </li>
 
                 <li>
@@ -327,8 +351,8 @@
             <li class="timeline-item">
               <a target="_blank" href="https://dianglobaltech.co.id/" class="h4 timeline-item-title">
                 <span>CV. Dian Global Tech - Fullstack Web</span>
-               <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 512 512" color="white" height="18"
-                  width="18" xmlns="http://www.w3.org/2000/svg" style="color: white;">
+                <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 512 512" color="white"
+                  height="18" width="18" xmlns="http://www.w3.org/2000/svg" style="color: white;">
                   <path fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="32"
                     d="M384 224v184a40 40 0 0 1-40 40H104a40 40 0 0 1-40-40V168a40 40 0 0 1 40-40h167.48M336 64h112v112M224 288 440 72">
                   </path>
@@ -358,8 +382,8 @@
 
               <a target="_blank" href="https://bisa.ai/" class="h4 timeline-item-title">
                 <span>PT BISA Artifisial Indonesia (BISA.AI) - Frontend Developer</span>
-                <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 512 512" color="white" height="18"
-                  width="18" xmlns="http://www.w3.org/2000/svg" style="color: white;">
+                <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 512 512" color="white"
+                  height="18" width="18" xmlns="http://www.w3.org/2000/svg" style="color: white;">
                   <path fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="32"
                     d="M384 224v184a40 40 0 0 1-40 40H104a40 40 0 0 1-40-40V168a40 40 0 0 1 40-40h167.48M336 64h112v112M224 288 440 72">
                   </path>
@@ -425,6 +449,21 @@
               <span>React.js</span>
             </li>
             <li>
+              <img title="Svelte" class="rounded-image" src="/assets/images/logo/logo-svelte.avif" width="50"
+                height="50" />
+              <span>Svelte</span>
+            </li>
+            <li>
+              <img title="React" class="rounded-image" src="/assets/images/logo/logo-vue.avif" width="50"
+                height="50" />
+              <span>Vue</span>
+            </li>
+            <li>
+              <img title="React" class="rounded-image" src="/assets/images/logo/logo-angular.avif" width="50"
+                height="50" />
+              <span>Angular</span>
+            </li>
+            <li>
               <img title="Nextjs" class="rounded-image" src="/assets/images/logo/logo-nextjs.webp" width="50"
                 height="50" />
               <span>Next.js</span>
@@ -459,8 +498,7 @@
               <span>Mongodb</span>
             </li>
             <li>
-              <img title="Jira" class="rounded-image" src="/assets/images/logo/logo-jira.webp" width="50"
-                height="50" />
+              <img title="Jira" class="rounded-image" src="/assets/images/logo/logo-jira.webp" width="50" height="50" />
               <span>Jira Software</span>
             </li>
 
