--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
               </a>
             </li>
             <li class="project-item  active" data-filter-item data-category="MEA Digital Marketing">
-              <a href="https://gowebin.co.id" target="_blank">
+              <a href="https://storybook.id" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -684,7 +684,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/projects/mea-sebari.webp" width="100" height="200" alt="Platform UMKM"
+                  <img src="./assets/images/projects/mea-sebari.avif" width="100" height="200" alt="Platform UMKM"
                     loading="lazy">
                 </figure>
 
