fix: update skill chrome extension

--- a/index.html
+++ b/index.html
@@ -424,9 +424,9 @@
               <span>Javascript</span>
             </li>
             <li>
-              <img title="Web Scraping" class="rounded-image" src="/assets/images/logo/web-scraping.png" width="50"
+              <img title="Chrome extension" class="rounded-image" src="/assets/images/logo/web-scraping.png" width="50"
                 height="50" />
-              <span>Web Scraping</span>
+              <span>Chrome Extension</span>
             </li>
             <li>
               <img title="Javascript" class="rounded-image" src="/assets/images/logo/logo-jquery.webp" width="50"
